--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "@react-three/drei": "^9.114.6",
     "axios": "^1.7.7",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
