--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.5",
     "@react-three/drei": "^9.114.6",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.10",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
     "react": "^18",
