--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.80.3"
+    "sass": "^1.80.3",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/spotify-web-api-node": "^5.0.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "typescript": "^5"
