--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.114.6",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.10",
+    "html2canvas": "^1.4.1",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
     "react": "^18",
