--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.11.10",
     "html2canvas": "^1.4.1",
+    "lenis": "^1.1.20",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
     "react": "^18",
