--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.5",
     "@react-three/drei": "^9.114.6",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
     "html2canvas": "^1.4.1",
     "lenis": "^1.2.3",
